Добавив функції які зберігають і завантажують дані з localStotage.

--- a/index.html
+++ b/index.html
@@ -12,23 +12,7 @@
          <h1 class="todo-list__title">TODO LIST</h1>
          <input type="text" name="input" class="todo-list__input" placeholder="що плануєш сьогодні?">
          <button type="button" class="todo-list__button">додати</button>
-         <div class="todo-list__list">
-            <!-- <div class="todo-list__task">
-               <input type="checkbox" name="task">
-               <p>Погодувати кота</p>
-               <button type="button">видалити</button>
-            </div>
-            <div class="todo-list__task">
-               <input type="checkbox" name="task">
-               <p>Погодувати кота</p>
-               <button type="button">видалити</button>
-            </div>
-            <div class="todo-list__task">
-               <input type="checkbox" name="task">
-               <p>Погодувати кота</p>
-               <button type="button">видалити</button>
-            </div> -->
-         </div>
+         <div class="todo-list__list"></div>
       </div>
    </div>
    <script src="script.js"></script>
