--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="todo-list">
          <h1 class="todo-list__title">TODO LIST</h1>
          <input type="text" name="input" class="todo-list__input" placeholder="що плануєш сьогодні?">
-         <button type="button" class="todo-list__button">додати</button>
+         <button type="button" id="delete" class="todo-list__button">додати</button>
          <div class="todo-list__list"></div>
       </div>
    </div>
