--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
 <body>
    <div class="wrapper">
       <div class="todo-list">
+         <div class="filtres">
+            <button class="filtres__all" type="submit">all</button>
+            <button class="filtres__active" type="submit">active</button>
+            <button class="filtres__completed" type="submit">completed</button>
+         </div>
          <h1 class="todo-list__title">TODO LIST</h1>
          <input type="text" name="input" class="todo-list__input" placeholder="що плануєш сьогодні?">
          <button type="button" class="todo-list__button">додати</button>
