--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
    <div class="wrapper">
       <div class="todo-list">
          <h1 class="todo-list__title">TODO LIST</h1>
-         <div class="filtres">
-            <button class="filtres__all" type="submit">all</button>
-            <button class="filtres__active" type="submit">active</button>
-            <button class="filtres__completed" type="submit">completed</button>
-         </div>
          <input type="text" name="input" class="todo-list__input" placeholder="що плануєш сьогодні?">
          <button type="button" class="todo-list__button">додати</button>
+         <div class="todo-list__filtres">
+            <button class="filtres__all" id="all" type="submit">all</button>
+            <button class="filtres__active" id="active" type="submit">active</button>
+            <button class="filtres__completed" id="completed" type="submit">completed</button>
+         </div>
          <div class="todo-list__list"></div>
       </div>
    </div>
