--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
          <input type="text" name="input" class="todo-list__input" placeholder="що плануєш сьогодні?">
          <button type="button" class="todo-list__button">додати</button>
          <div class="todo-list__filtres">
-            <button class="filtres__all" id="all" type="submit">all</button>
-            <button class="filtres__active" id="active" type="submit">active</button>
-            <button class="filtres__completed" id="completed" type="submit">completed</button>
+            <button class="filtres__all" id="all" type="submit">всі</button>
+            <button class="filtres__active" id="active" type="submit">активні</button>
+            <button class="filtres__completed" id="completed" type="submit">завершені</button>
          </div>
          <div class="todo-list__list"></div>
       </div>
